KDE-native mouse gestures stopped working with XInput2
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | fixed |
| firefox82 | --- | fixed |
People
(Reporter: gwarser, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:82.0) Gecko/20100101 Firefox/82.0
Steps to reproduce:
On Manjaro KDE I have few mouse gestures configured in System settings -> Shortcuts -> Custom shortcuts. For example UP->DOWN triggers F5 to refresh. This stopped working recently
Actual results:
Mouse gestures do not trigger any actions.
Expected results:
For example moving muse up-down with configured button (right) pressed should reload page.
Bisected to https://bugzilla.mozilla.org/show_bug.cgi?id=1207700
Running Firefox with MOZ_USE_XINPUT2=0 fixes this.
20:21.50 INFO: Running autoland build built on 2020-08-18 08:30:42.540000, revision a4b38250
20:32.56 INFO: Launching /tmp/tmpy2c6nycp/firefox/firefox
20:32.56 INFO: Application command: /tmp/tmpy2c6nycp/firefox/firefox -profile /tmp/tmpnb9p5cmh.mozrunner
20:33.39 INFO: application_buildid: 20200818081337
20:33.39 INFO: application_changeset: a4b38250348d81c88a2c21c9bcfb9f4ea4ca5c68
20:33.39 INFO: application_name: Firefox
20:33.39 INFO: application_repository: https://hg.mozilla.org/integration/autoland
20:33.39 INFO: application_version: 81.0a1
Was this integration build good, bad, or broken? (type 'good', 'bad', 'skip', 'retry', 'back' or 'exit' and press Enter): bad
20:46.10 INFO: Narrowed integration regression window from [483ef87a, 5c151878] (10 builds) to [483ef87a, a4b38250] (6 builds) (~2 steps left)
20:48.78 WARNING: Skipping build fe37e2106c17: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.fe37e2106c17443c006fe9fda5c14bec4beb7dcd.firefox.linux64-opt'
20:49.98 WARNING: Skipping build 6c7f2177e485: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.6c7f2177e485c5eb00adb808e0356ac6b94f4400.firefox.linux64-opt'
20:51.17 WARNING: Skipping build d067e210dda6: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.d067e210dda6e3e1183ad9fb81259e8b774a3471.firefox.linux64-opt'
20:52.33 WARNING: Skipping build 199f5f63f63c: Unable to find build info using the taskcluster route 'gecko.v2.autoland.shippable.revision.199f5f63f63c8624e2080d93a8dbf76c2d51da2a.firefox.linux64-opt'
20:52.33 INFO: No more integration revisions, bisection finished.
20:52.33 INFO: Last good revision: 483ef87aa6e85cb340d1c17b5b87bb7c217fb3b8
20:52.33 INFO: First bad revision: a4b38250348d81c88a2c21c9bcfb9f4ea4ca5c68
20:52.33 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=483ef87aa6e85cb340d1c17b5b87bb7c217fb3b8&tochange=a4b38250348d81c88a2c21c9bcfb9f4ea4ca5c68
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Set release status flags based on info from the regressing bug 1207700
Using Firefox-Nightly 81.0a1 (2020-08-24)
User agent: Mozilla/5.0 (X11; Linux x86_64; rv:81.0) Gecko/20100101 Firefox/81.0
Desktop: Manjaro KDE Plasma 5.19.4
Can confirm. Mouse gestures stopped working with a recent update. Setting MOZ_USE_XINPUT2=0 restores the functionality to how it was previously.
| Assignee | ||
Comment 3•5 years ago
|
||
Botond,
as I'm not a KDE user I'm not sure how to proceed here. Shell we revert the Bug 1207700 or is the fix there more important than this regression?
Thanks.
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 5•5 years ago
|
||
(In reply to Martin Stránský [:stransky] from comment #3)
Botond,
as I'm not a KDE user I'm not sure how to proceed here. Shell we revert the Bug 1207700 or is the fix there more important than this regression?
I am thinking revert for KDE only (and perhaps for KDE non-touchscreen only). Is that easy to check for?
Comment 6•5 years ago
|
||
Isn't this mostly an upstream issue? Also, does MOZ_USE_XINPUT2=1 work in a wayland session?
Comment 7•5 years ago
|
||
(In reply to Shawn Landden from comment #6)
Isn't this mostly an upstream issue?
It may well be. If someone is able to formulate a KDE bug report about this, that would be very helpful.
Also, does
MOZ_USE_XINPUT2=1work in a wayland session?
In a wayland session, the touch interactions that MOZ_USE_XINPUT2=1 enables always work, and the env var has no effect.
(In reply to Botond Ballo [:botond] from comment #4)
gwarser, does your computer have a touchscreen?
No, it's classic monitor.
Comment 9•5 years ago
|
||
Hi Martin, can you please give a severity to this bug? Thank you!
| Assignee | ||
Comment 10•5 years ago
|
||
(In reply to Botond Ballo [:botond] from comment #5)
(In reply to Martin Stránský [:stransky] from comment #3)
Botond,
as I'm not a KDE user I'm not sure how to proceed here. Shell we revert the Bug 1207700 or is the fix there more important than this regression?I am thinking revert for KDE only (and perhaps for KDE non-touchscreen only). Is that easy to check for?
Yes, we can do that.
| Assignee | ||
Comment 12•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 14•5 years ago
|
||
Comment 15•5 years ago
|
||
| bugherder | ||
Comment 16•5 years ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 17•5 years ago
|
||
Comment on attachment 9173728 [details]
Bug 1661219 [Linux/KDE] Disable XINPUT2 by default on KDE, r?botond
Beta/Release Uplift Approval Request
- User impact if declined: Broken mouse gestures on KDE.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We're going disable XINPUT2 for KDE which was default state in former releases.
- String changes made/needed: none
Comment 18•5 years ago
|
||
Comment on attachment 9173728 [details]
Bug 1661219 [Linux/KDE] Disable XINPUT2 by default on KDE, r?botond
Approved for 81.0b8.
Comment 19•5 years ago
|
||
| bugherder uplift | ||
Description
•