Bug 1661219 [Linux/KDE] Disable XINPUT2 by default on KDE, r=botond a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D89194