toolkit/xre/nsAppRunner.cpp
@@ -3838,8 +3838,11 @@ int XREMain::XRE_mainStartup(bool* aExitFlag) {
   const char* useXI2env = PR_GetEnv("MOZ_USE_XINPUT2");
   const bool disableXI2ByPref = (useXI2env && (*useXI2env == '0'));
   const bool enabledXI2ByPref = (useXI2env && (*useXI2env == '1'));
-  if (!enabledXI2ByPref &&
-      (gtk_check_version(3, 24, 0) != nullptr || disableXI2ByPref)) {
+  const char* currentDesktop = getenv("XDG_CURRENT_DESKTOP");
+  const bool IsKDEDesktop =
+      (currentDesktop && strstr(currentDesktop, "KDE") != nullptr);
+  if (!enabledXI2ByPref && (gtk_check_version(3, 24, 0) != nullptr ||
+                            disableXI2ByPref || IsKDEDesktop)) {
     gdk_disable_multidevice();
   }
 #  endif
